# tree-sitter-c-sharp

./: Cargo.toml  grammar.js  package.json
bindings/rust/: lib.rs
corpus/: attributes.txt  classes.txt  contextual-keywords.txt  enums.txt  expressions.txt  identifiers.txt  interfaces.txt  statements.txt  structs.txt  type-operators.txt
src/: grammar.json  node-types.json
