[package]
name = "tree-sitter-c_sharp"
description = "c_sharp grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "c_sharp"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-javascript"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.17"

[build-dependencies]
cc = "1.0"
